--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,7 @@ spring:
     username: root
     password: root
     url: jdbc:mysql://118.25.41.246:3306/halodb?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
+logging:
+  level:
+    # 开启JOOQ debug级别日志：查看执行的SQL、影响行数以及结果集日志
+    org.jooq: debug
